# vbwd-backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  Makefile  Makefile.server  README.md  alembic.ini  docker-compose.production.yaml  docker-compose.server.yaml  docker-compose.yaml  gunicorn.conf.py  nginx.proxy.conf  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: plugin-tests.yml  tests.yml
alembic/: env.py
alembic/versions/: 20251221_1227_initial_schema_with_uuid.py  20260109_add_user_details_fields.py  20260113_add_addon_table.py  20260113_add_token_bundle_table.py  20260122_add_country_table.py  20260122_add_payment_method_tables.py  20260207_add_plugin_config_table.py  20260208_add_addon_tarif_plans_table.py  20260211_add_stripe_customer_id_to_user.py  20260212_add_paypal_fields.py  20260212_rename_provider_columns.py  20260214_add_invoice_line_item_table.py  20260214_add_invoice_tax_columns.py  20260214_add_missing_subscription_columns.py  20260214_add_token_bundle_purchase_table.py  20260215_create_addon_subscription_table.py  20260215_create_arcana_table.py  20260215_create_feature_usage_table.py  20260215_create_password_reset_token_table.py  20260215_create_role_permission_tables.py  20260215_create_taro_session_and_card_draw_tables.py  20260215_create_token_balance_tables.py  (+12 more)
plugins/: __init__.py  config.json  plugins.json
scripts/: install-stripe-cli.sh
src/: __init__.py  app.py  config.py  container.py  extensions.py
tests/: conftest.py
vbwd/: __init__.py  app.py  container.py  extensions.py  scheduler.py
(+654 files in other folders)
