[project]
name = "vbwd-backend"
version = "0.1.0"
description = "VBWD SaaS Platform — Backend Core"
requires-python = ">=3.11"
license = {text = "BSL-1.1"}
dependencies = [
    "Flask>=3.0",
    "gunicorn>=21.0",
    "flask-cors>=4.0",
    "SQLAlchemy>=2.0",
    "Flask-SQLAlchemy>=3.1",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "redis>=4.6",
    "hiredis>=2.3",
    "celery[redis]>=5.3",
    "APScheduler>=3.10",
    "PyJWT>=2.8",
    "Flask-JWT-Extended>=4.5",
    "bcrypt>=4.1",
    "cryptography>=41.0",
    "Flask-Limiter>=3.5",
    "Flask-WTF>=1.2",
    "marshmallow>=3.20",
    "email-validator>=2.1",
    "dependency-injector>=4.41",
    "stripe>=14.0",
    "httpx>=0.25",
    "requests>=2.31",
    "flask-socketio>=5.3",
    "python-socketio>=5.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-flask>=1.3",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "factory-boy>=3.3",
    "faker>=21.0",
    "flake8>=6.1",
    "mypy>=1.7",
    "black>=23.12",
    "types-redis>=4.6",
    "types-python-dateutil>=2.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vbwd*"]
exclude = ["tests*", "plugins*"]

[tool.setuptools.package-data]
vbwd = [
    "templates/**/*",
    "templates/*",
]
